# Discord-SelfBot

./: .gitignore  LICENSE  README.md  autoreply.txt  config.json  main.py  pyproject.toml  requirements.txt  selfbot.py  setup.bat
config/: autoreply-config.json  config.json
