[project]
name = "discord-aiselfbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "discord-py-self>=2.0.1",
    "google-genai>=1.28.0",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "pyfiglet>=1.0.3",
    "qrcode>=8.2",
    "requests>=2.32.4",
]
